config/samples/mesh_v1alpha1_envoyconfig.yaml
apiVersion: mesh.example.com/v1alpha1
kind: EnvoyConfig
metadata:
  name: sample-envoyconfig
  namespace: default
spec:
  clusterName: sample-cluster
  serviceName: sample-service
  config: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: sample_service
              http_filters:
              - name: envoy.filters.http.router
      clusters:
      - name: sample_service
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: sample_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: sample-service.default.svc.cluster.local
                    port_value: 8080
